# booklet-allocator

./: .gitignore  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.2.0.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: allocation.rs  cleanup.rs  commands.rs  excel.rs  lib.rs  logging.rs  main.rs
src/components/: CycleCard.tsx  EvaluatorInput.tsx  InfoButton.tsx  WelcomeBanner.tsx
src/pages/: LogViewer.tsx  Main.tsx  Onboarding.tsx  Preview.tsx  Settings.tsx  Summary.tsx
src/store/: useAppStore.ts
