[package]
name = "booklet-allocator"
version = "0.1.0"
description = "Exam booklet allocator for evaluators"
authors = []
edition = "2021"

[lib]
name = "booklet_allocator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
argon2 = "0.5"
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
calamine = { version = "0.24", features = ["dates"] }
rust_xlsxwriter = "0.70"
aes-gcm = "0.10"
mac_address = "1.1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
argon2 = "0.5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
